--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,7 @@
-name: 'Dotnet Build and Test'
+name: 'Dotnet Migrate and Test'
 description:
-  'Builds a .NET project, runs tests and handles EF Core migrations including
-  rollback on failure'
+  'Runs tests and handles EF Core migrations including
+  rollback on failure for a .NET project,'
 author: Mario De Benedictis
 
 # Add your action's branding here. This will appear on the GitHub Marketplace.
