--- a/action.yml
+++ b/action.yml
@@ -6,8 +6,8 @@ author: Mario De Benedictis
 
 # Add your action's branding here. This will appear on the GitHub Marketplace.
 branding:
-  icon: heart
-  color: red
+  icon: repeat
+  color: purple
 
 # Define your inputs here.
 inputs:
